prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-server
  labels:
    app: statistics-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics-server
  template:
    metadata:
      labels:
        app: statistics-server
    spec:
      imagePullSecrets:
        - name: facegram-registery
      containers:
        - name: statistics-server
          image: ""
          ports:
            - containerPort: 30001
