prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statistics-server-service
spec:
  selector:
    app: statistics-server
  ports:
    - protocol: TCP
      port: 30002
      targetPort: 30002
  type: NodePort
